<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Xna</string>
    <string name="app_slogan">Where the art begin...</string>
    <string name="settings">Settings</string>
    <string name="error_connectivity">Check your internet connection</string>

    <!-- Toast -->
    <string name="open_user_profile">Put your DSLR into bag and go...!!!</string>
    <string name="vn_lang_value">Vietnam</string>
    <string name="en_lang_value">English</string>
    <string name="en_lang_key">en</string>
    <string name="vn_lang_key">vi</string>
    <string name="choose_language">Choose language</string>
    <string name="language">Language</string>
     <!--Category -->
    <string name="STAFF_CHOICE">Staff Choice</string>
    <string name="LANDSCAPE">Landscape</string>
    <string name="PORTRAIT">Portrait</string>
    <string name="NATURE">Nature</string>
    <string name="STREET_LIFE">Street Life</string>
    <string name="MACRO">Macro</string>
    <string name="ARCHITECTURE">Architecture</string>
    <string name="TRAVEL">Travel</string>
    <string name="ANIMAL">Animal</string>
    <string name="BW">Black and White</string>
    <string name="SPORT">Sport</string>

    <string name="Abstract">Abstract</string>
    <string name="Advertisement">Advertisement</string>
    <string name="Conceptual">Conceptual</string>
    <string name="Experimental">Experimental</string>
    <string name="Fashion">Fashion</string>
    <string name="Journalism">Journalism</string>
    <string name="Nude">Nude</string>
    <string name="Other">Other</string>
    <string name="Panorama">Panorama</string>
    <string name="Product">Product</string>
    <string name="Stage">Stage</string>
    <string name="Still_Life">Still Life</string>
    <string name="Wedding">Wedding</string>

    <!-- End -->
    <string name="sign_in">Sign in</string>
    <string name="about">About XOM nhiep anh</string>
    <string name="about_title">About</string>
    <string name="current_version">Current version: %s</string>
    <string name="general">General</string>
    <string name="no_info">No information</string>
    <string name="no_name">No name</string>
    <string name="download_completed">Download completed</string>
    <string name="download_failed">Download failed</string>
    <string name="download_starting">Download starting...</string>
    <string name="share_error">Have error when sharing photo</string>
    <string name="error_loading_image">Error when loading photo. </string>
    <!-- Label -->
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="date_added">Date added</string>
    <string name="view">View</string>
    <string name="favorite">Favorite</string>
    <string name="comments">Comments</string>
    <string name="username">Username</string>
    <string name="author">Author</string>
    <string name="author_info">Author information</string>
    <string name="choose_photo">Star photo</string>
    <string name="comment">Comment</string>
    <string name="date_join">Join date</string>
    <string name="product_info">Photo information</string>
    <string name="single_photo">Uploaded photo</string>
    <string name="source_link">Source link</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_content">Refresh...</string>
    <string name="click_back_message">Click back again to exit</string>
    <string name="choose_theme">Choose theme color</string>

</resources>
