<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hm="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">


        <!--<ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_calendar" />-->
        <com.m2team.xna.custom.LabelTextView
            hm:fontStyle="light"
            android:layout_width="match_parent"
            style="@style/textSmallStyle"
            android:text="@string/date_added"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/photo_added"
            style="@style/textImgStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">


       <!-- <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_view_128" />-->
        <com.m2team.xna.custom.LabelTextView
            hm:fontStyle="light"
            android:layout_width="match_parent"
            style="@style/textSmallStyle"
            android:text="@string/view"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/photo_view"
            style="@style/textImgStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">


        <!--<ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_favorites_128" />-->
        <com.m2team.xna.custom.LabelTextView
            hm:fontStyle="light"
            android:layout_width="match_parent"
            style="@style/textSmallStyle"
            android:text="@string/favorite"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/photo_favorite"
            style="@style/textImgStyle" />
    </LinearLayout>
</LinearLayout>
